--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Bash-Completion-Plugins-pinto
 
+0.002     2012-08-30
+        - work with leading --root params
+
 0.001     2012-08-30
         - bash completion for Pinto
         - derived from Bash::Completion::Plugins::perlbrew by Rob Hoelz
