Import of SCHWIGON/Bash-Completion-Plugins-pinto-0.003 from CPAN.
gitpan-cpan-distribution: Bash-Completion-Plugins-pinto
gitpan-cpan-version:      0.003
gitpan-cpan-path:         SCHWIGON/Bash-Completion-Plugins-pinto-0.003.tar.gz
gitpan-cpan-author:       SCHWIGON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Bash-Completion-Plugins-pinto
 
+0.003     2012-09-04
+        - fix "uninitialized value" warning
+
 0.002     2012-08-30
         - work with leading --root params
 
